Switched fonts :troll:

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title></title>
         <style>
             body {
-                font-family: "Lucida Calligraphy", cursive;
+                font-family: "Worker Mono", monospace;
                 display: flex;
                 justify-content: center;
                 align-items: center;
